# sqlmodel

./: pyproject.toml
todos/: main.py
todos/models/: todos.py
